# cyclonedds-python

./: .flake8  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  azure-pipelines.yml  local-ci.py  pyoxidizer.bzl  pyproject.toml  setup.py
.azure/: publish-coverage.yml  publish-documentation.yml  publish-release-nightly.yml  publish-release.yml  wheel-build-tester.yml
.azure/scripts/wheel/: cibuildwheel_common.sh  cibuildwheel_linux.sh  cibuildwheel_mac_arm.sh  cibuildwheel_mac_fixwheel.sh  cibuildwheel_mac_intel.sh  cibuildwheel_win32.sh  cibuildwheel_win64.sh
.azure/templates/: build-cyclone.yml  build-test.yml  build-wheel.yml  publish-package.yml
buildhelp/: bdist_wheel.py  build_ext.py  cyclone_search.py  oxidize_library.py  wheel_library.py
clayer/: cdrkeyvm.c  cdrkeyvm.h  pysertype.c  pysertype.h  typeser.c  typeser.h
cyclonedds/: __idlc__.py  __init__.py  builtin.py  builtin_types.py  core.py  domain.py  dynamic.py  internal.py  log.py  pub.py  qos.py  qos_provider.py  sub.py  topic.py  util.py
cyclonedds/idl/: __init__.py  _builder.py  _machinery.py  _main.py  _support.py  _type_helper.py  _type_normalize.py  _xt_builder.py  annotations.py  builder.py  machinery.py  main.py  module_helper.py  mypy_plugin.py  support.py  type_helper.py  types.py  types.pyi
cyclonedds/idl/_typesupport/: __init__.py  ddsi_xt_type_object.idl  ddsi_xt_typemap.idl  howto.md
cyclonedds/tools/cli/: common.py  ddsperf.py  idl.py  ls.py  main.py  ps.py  pub.py  qosformat.py  record.py  settings.py  sub.py  typeof.py  utils.py
cyclonedds/tools/ddsls/: __init__.py  __main__.py
cyclonedds/tools/insight/: .gitignore  DdsData.py  README.md  backup.py  insight.pyproject  main.py  main.qml  main.spec  requirements.txt  resources.qrc  utils.py
cyclonedds/tools/pubsub/: __init__.py  __main__.py  check_entity_qos.py  datastruct.py  entity_qos.py  parse_qos.py  topic_manager.py
cyclonedds/tools/wheel_idlc/: __init__.py
docs/: .gitignore  nocacheserver.py  requirements.txt  run.sh
docs/manual/: api.rst  conf.py  cyclonedds.core.rst  cyclonedds.idl.rst  cyclonedds.internal.rst  cyclonedds.pub.rst  idl.rst  index.rst  intro.rst  tools.ddsls.rst  tools.pubsub.rst  tools.rst  variables.json
docs/manual/static/: style.css
docs/source/: conf.py  cyclonedds.builtin.rst  cyclonedds.core.rst  cyclonedds.domain.rst  cyclonedds.dynamic.rst  cyclonedds.idl.rst  cyclonedds.internal.rst  cyclonedds.qos.rst  cyclonedds.sub.rst  cyclonedds.topic.rst  cyclonedds.util.rst  datatypes.rst  dds.rst  idl.rst  index.rst  intro.rst  pycdr.rst  tools.ddsls.rst  tools.pubsub.rst  tools.rst  usage.rst
docs/source/static/: style.css
examples/async/: async_subscriber.py  vehicles.py
examples/builtin_topics/: participants.py
examples/fuzzer_with_c/: README.md  fuzzer.py
examples/fuzzer_with_c/republisher/: CMakeLists.txt  (+2 more)
examples/fuzzer_with_c/republisher/src/: CMakeLists.txt  republisher.c
examples/helloworld/: helloworld.py
examples/idl/: basic.py  fuzzy.py  key.py  typeobj.py
examples/vehicle/: publisher.py  subscriber.py  vehicles.py
idlpy/: CMakeLists.txt
idlpy/include/: generator.h
idlpy/src/: context.c  context.h  generator.c  naming.c  naming.h  ssos.c  ssos.h  types.c  types.h  util.c  util.h
src/cyclonedds/: .coveragerc  CMakeLists.txt  pyproject.toml  pytest.ini  setup.py
src/cyclonedds/clayer/src/: cdrkeyvm.c  cdrkeyvm.h  pysertype.c
src/cyclonedds/cyclonedds/: __init__.py  builtin.py  core.py  domain.py  idl.py  internal.py  pub.py  qos.py  sub.py  topic.py  util.py
src/cyclonedds/cyclonedds/tools/ddsls/: __init__.py  __main__.py
src/cyclonedds/cyclonedds/tools/pubsub/: __init__.py  check_entity_qos.py  datastruct.py  entity_qos.py  parse_qos.py  topic_manager.py
src/cyclonedds/examples/async/: async_subscriber.py
src/cyclonedds/examples/helloworld/: helloworld.py
src/cyclonedds/examples/vehicle/: publisher.py  subscriber.py  vehicle.idl  vehicles.py
src/cyclonedds/tests/: conftest.py  test_builtin.py  test_communication.py  test_ddsls.py  test_guardcondition.py  test_idl.py  test_keyed_type.py  test_listener.py  test_loader.py  test_participant.py  test_publisher.py  test_pubsub.py  test_qos.py  test_readcondition.py  test_reader.py  test_regression.py  test_scoped_qos.py  test_waitset.py  test_writer.py
src/cyclonedds/tests/support_modules/testtopics/: __init__.py  message.py
src/cyclonedds/tools/: ddsls.py
src/idlpy/: CMakeLists.txt  PackageConfig.cmake.in
src/idlpy/src/: context.c  context.h  generator.c  naming.c  naming.h  types.c  types.h  util.c
src/pycdr/: .coveragerc  pyproject.toml  pytest.ini  setup.cfg  setup.py
src/pycdr/examples/: basic.py  fuzzy.py  key.py  typeobj.py
src/pycdr/pycdr/: __init__.py  builder.py  machinery.py  main.py  support.py  type_helper.py  types.py
src/pycdr/pycdr/type_object/: builder.py  idl_entities.py  util.py
src/pycdr/tests/: conftest.py  test_basic_types.py
src/pycdr/tests/support_modules/: test_classes.py
tests/: conftest.py  test_basic_types.py  test_bitmasks.py  test_builtin.py  test_c_compatibility.py  test_communication.py  test_data_representation.py  test_datatypes_keywords.py  test_ddsls.py  test_domain.py  test_dynamic.py  test_encoding_machinery.py  test_entity.py  test_enum_as_discriminator.py  test_fuzzy.py  test_idlc.idl  test_idlc.py  test_idlc_hierarchy.idl  test_idlc_hierarchy.py  test_keyed_type.py  test_listener.py  test_loader.py  test_participant.py  test_pubsub.py  test_qos.py  test_qos_provider.py  test_querycondition.py  test_readcondition.py  test_reader.py  test_recursive_types.py  test_regression.py  test_scoped_qos.py  test_shapes_data_type.py  test_statistics.py  test_struct_inheritance.py  test_subscriber.py  test_topic.py  test_topic_inheritance.py  test_typeobjects.py  test_unions.py  (+2 more)
tests/py_c_compat/: CMakeLists.txt  setup.py
tests/py_c_compat/src/: CMakeLists.txt  py_c_compat.idl  republisher.c
tests/support_modules/: fuzzy_idl_definition.py  random_instance.py  test_classes.py  test_fullxcdr2_classes.py  test_rec_classes.py  virtual_test_env.py
(+76 files in other folders)
