[project]
requires-python = ">=3.6"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build",
    "cmake>=3.18.0",
    "ninja"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov-config=.coveragerc --cov=cyclonedds --cov-report=xml --import-mode=importlib"
required_plugins = "pytest-cov pytest-mock"
testpaths = "tests"
