[project]
requires-python = ">=3.6"

[build-system]
requires = [
    "setuptools>=44.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov-config=.coveragerc --cov=pycdr --cov-report=xml --cov-report=html --import-mode=importlib"
required_plugins = "pytest-cov"
testpaths = "tests"