[metadata]
name = pycdr
version = 0.1.5
author = Thijs Miedema
author_email = thijs.miedema@adlinktech.com
description = Python CDR serialization
url = https://github.com/eclipse-cyclone/cyclonedds-python
project_urls =
    Bug Tracker = https://github.com/eclipse-cyclone/cyclonedds-python/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)
    License :: OSI Approved :: BSD License  # BSD-Clause-3 is intended here
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = False
packages = find:
python_requires = >=3.6
install_requires =
    dataclasses>=0.8; python_version < "3.7"
    typing-inspect>=0.6; python_version < "3.7"
    typing-extensions>=3.7; python_version < "3.9"

[options.extras_require]
dev = pytest; pytest-cov; flake8

[options.packages.find]
exclude =
    tests
    examples
